--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*, ::after, ::before {
+  box-sizing: inherit;
+}
+
+.body {
+  font-family: "Times new roman", sans-serif;
+  font-size:x-large;
+  display: flex;
+  justify-content: center;
+  align-items: top;
+  min-height: 800px;
+  margin: 20px auto;
+  padding: 0 20px;
+  background-image: url("../obrazek/tło.jpg");
+  background-position: center;
+  background-size:contain;
 }
