--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+import 
+
 html {
   box-sizing: border-box;
 }
@@ -15,7 +17,7 @@ html {
   min-height: 800px;
   margin: 20px auto;
   padding: 0 20px;
-  background-image: url("public/img/tlo.jpg");
+  background-image: url ("${tlo.jpg}");
   background-position: center;
   background-size:contain;
 }
