--- a/src/Clock/style.css
+++ b/src/Clock/style.css
@@ -1,5 +1,6 @@
 .clock {
     text-align: right;
     font-family: monospace;
-    color:rgb(246, 27, 206);
+    color:rgb(251, 249, 251);
+    position: relative
 }
